--- a/web-developer.html
+++ b/web-developer.html
@@ -46,11 +46,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oiGDafwv&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nraVVLwH'>MORI Associates, Inc. Careers - Website Developer Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oiGDafwv&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nraVVLwH'>MORI Associates, Inc. Careers - Website Developer Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kingkong.workable.com/j/4A06BA4BF2'>King Kong - Jobs: Badass Mid-Weight Front-End Web Developer - Apply online</a></h5> 
+<h5><a href='https://kingkong.workable.com/j/4A06BA4BF2'>King Kong - Jobs: Badass Mid-Weight Front-End Web Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -165,11 +165,11 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/1c635ef7-5a3c-4265-8c7b-cec2bc0a93c6'>Helbiz Inc. - Back-End Web Developer - New York City</a></h5> 
+<h5><a href='https://jobs.lever.co/helbiz/1c635ef7-5a3c-4265-8c7b-cec2bc0a93c6'>Helbiz Inc. - Back-End Web Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://saggezza1.applytojob.com/apply/j0AIz8dZfD/Web-UI-Developer'>Web UI developer - Saggezza - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://saggezza1.applytojob.com/apply/j0AIz8dZfD/Web-UI-Developer'>Web UI developer - Saggezza - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -209,7 +209,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Frontend Web Developer - Roku at created 10-Jul-2019.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ferratum/4733341a-c221-4914-9e01-b7847cbe1736'>Ferratum Group - Web Analytics Developer - Google related web development</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ferratum/4733341a-c221-4914-9e01-b7847cbe1736'>Ferratum Group - Web Analytics Developer - Google related web development</a></h5> 
 <p><span class="badge badge-light">Helsinki, Finland North America</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -254,7 +254,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://advantagemediagroup.applytojob.com/apply/tZ5xlVD8v4/Front-End-Web-Developer'>Front End Web Developer - Advantage Media Group - Career Page</a></h5> 
+<h5><a href='http://advantagemediagroup.applytojob.com/apply/tZ5xlVD8v4/Front-End-Web-Developer'>Front End Web Developer - Advantage Media Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -288,7 +288,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Full Stack Developer. Job ID 2019-1565. Technology New York, New York. Apply
 . Description. Medscape, a division of WebMD, develops and hosts physician?...</p>
@@ -343,7 +343,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/incode/61ad0e2e-8f8c-4024-9fc1-05c71801b1ae'>Incode Technologies - Senior Front End Web Developer / Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/incode/61ad0e2e-8f8c-4024-9fc1-05c71801b1ae'>Incode Technologies - Senior Front End Web Developer / Engineer</a></h5> 
 <p><span class="badge badge-light">Mexico Belgrade</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -351,7 +351,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://flextrade.recruitee.com/o/web-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flextrade.recruitee.com/o/web-developer'>
       Web Developer - FlexTrade
     </a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
@@ -386,7 +386,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/kallesgroup/jobs/4298748002'>Job Application for Full-Stack Web Developer at Kalles Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kallesgroup/jobs/4298748002'>Job Application for Full-Stack Web Developer at Kalles Group</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -468,7 +468,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p>6 days ago ... Front -End Web Developer. Paris. Marketing. Permanent Contract. Apply for this 
 job. Aircall's mission is to transform the business phone industry! Aircall is an?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
